# DB_Imp_Seminar

./: .gitignore  CMakeLists.txt  README.md
Seminar Paper/: CSR_latex  list  paper.aux  paper.out  paper.tex  vector c++
include/: ALGraph.h  ALGraphV2.h  ARTGraph.h  CSRGraph.h  CSRGraphV2.h  Graph.h  GraphAlgo.h
scripts/: test_runtime.sh  test_runtimeV2.sh
src/: ALGraph.cpp  ALGraphV2.cpp  ARTGraph.cpp  CSRGraph.cpp  CSRGraphV2.cpp  Graph.cpp  GraphAlgo.cpp
tests/: benchmark_test.cpp  benchmark_testv2.cpp  catch_test_dijkstra.cpp  main.cpp  random_graph_generator.cpp  random_graph_generatorv2.cpp  specific_graph_generator.cpp  test_perfEvent.cpp
